k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpninja
  labels:
    name: helpninja
    app: helpninja
