k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpninja-ingress
  namespace: helpninja
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: helpninja-encrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-ssl: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - helpninja.app
    secretName: helpninja-tls
  rules:
  - host: helpninja.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpninja-service
            port:
              number: 80
